Organize some code